dataclients/kubernetes/testdata/ingressV1/ingress-data/ing-with-default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: foo
  name: baz
spec:
  defaultBackend:
    service:
      name: bar
      port:
        number: 8181
---
apiVersion: v1
kind: Service
metadata:
  name: bar
  namespace: foo
spec:
  clusterIP: 10.3.190.97
  ports:
  - name: baz
    port: 8181
    protocol: TCP
    targetPort: 8080
  selector:
    application: myapp
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    application: myapp
  name: bar
  namespace: foo
subsets:
- addresses:
  - ip: 10.2.9.103
  - ip: 10.2.9.104
  ports:
  - name: baz
    port: 8080
    protocol: TCP
